# valkey-largecluster-harness

./: .gitignore  AGENTS.md  CODEX_LOOP.md  Makefile  README.md  pyproject.toml
codex/: current_phase_contract.json  current_phase_contract.md  loop_state.json  phase_manifest.json
codex_valkey_loop_md_bundle/: 00_给Codex的主控_自动NEXT循环规约.md  01_阶段Manifest源_ValkeyHarness.md  02_Gate_Diff_Artifacts_Status脚本规范.md  03_Codex长循环防遗忘规约.md  04_一致性自检报告.md  README_先给Codex读取.md
docker/: nodehost-entrypoint.sh  nodehost.Dockerfile
docs/: architecture.md
harness/: __init__.py  artifacts.py  cluster_check.py  cluster_create.py  cluster_plan.py  command_log.py  config.py  deployer.py  docker_nodehost.py  errors.py  events.py  executor.py  failover_observer.py  failover_timeline.py  fake_cluster.py  faults.py  harnessctl.py  inventory.py  jsonio.py  mini_yaml.py  network_faults.py  nodehost_client.py  placement.py  planner.py  platform_adapter.py  platform_darwin.py  platform_linux.py  port_allocator.py  preflight.py  project_quality.py  remote_nodehost.py  report_builder.py  report_models.py  scenario.py  scenario_runner.py  schema_validator.py  simple_yaml.py  slot_allocator.py  slot_check.py  ssh_exec.py  (+4 more)
inventories/: single-mac-dev.yaml  single-mac.dev.yaml  three-mac-uniform-interleaved.yaml  three-mac.interleaved.yaml  two-mac-physical-aligned.yaml  two-mac.physical-aligned.yaml
nodehost/: __init__.py  config_writer.py  fake_valkey.py  faults_network.py  faults_process.py  gen_configs.py  local_process.py  metrics.py  nodehostctl.py  process_table.py  supervisor.py  (+2 more)
(+215 files in other folders)
